hard-gists/174056/run.log
=== Docker Run Log for 174056 ===
Started at: Mi 29. Okt 12:26:41 CET 2025

[2025-10-29 12:26:41] START: Running container for 174056
[2025-10-29 12:26:41] SUCCESS: Container 1078c6d4c1b739cf05947ee6ecd6048f49285a2c7c347aad591692a1c0581e05 started for 174056
=== Container logs for 174056 ===
  File "/snippet.py", line 20
    except MySQLdb.OperationalError, e:
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 174056 ===
[2025-10-29 12:26:43] INFO: Container 1078c6d4c1b739cf05947ee6ecd6048f49285a2c7c347aad591692a1c0581e05 has stopped
